# indexmap

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.rst  RELEASES.md  RELEASES.rst  build.rs
.github/workflows/: ci.yml
benches/: bench.rs  faststring.rs  insert_unique_unchecked.rs
debug_metadata/: README.md  indexmap.natvis
examples/: custom_index.rs
src/: approxim.rs  borsh.rs  equivalent.rs  indexable.rs  inner.rs  lib.rs  macros.rs  map.rs  map_core.rs  multimap.rs  mutable_keys.rs  rustc.rs  serde.rs  serde_seq.rs  set.rs  sval.rs  sval2.rs  unsafe.rs  util.rs  view.rs  view_mut.rs
src/inner/: entry.rs
src/map/: core.rs  disjoint.rs  iter.rs  mutable.rs  serde_seq.rs  slice.rs  tests.rs
src/map/core/: entry.rs  extract.rs  raw.rs  raw_entry_v1.rs
src/rayon/: map.rs  mod.rs  set.rs
src/set/: iter.rs  mutable.rs  slice.rs  tests.rs
test-approxim/: Cargo.toml
test-approxim/src/: lib.rs
test-nostd/: Cargo.toml
test-nostd/src/: lib.rs
test-serde/: Cargo.toml
test-serde/src/: lib.rs
test-sval/: Cargo.toml
test-sval/src/: lib.rs
test-sval2/: Cargo.toml
test-sval2/src/: lib.rs
tests/: debugger_visualizer.rs  equivalent_trait.rs  macros_full_path.rs  quick.rs  serde.rs  tests.rs
