[package]
name = "ordermap"
version = "0.3.5"
authors = ["bluss"]
documentation = "https://docs.rs/ordermap/"
repository = "https://github.com/bluss/ordermap"
license = "Apache-2.0/MIT"
description = "A hash table with consistent order and fast iteration."

keywords = ["hashmap"]
categories = ["data-structures"]

[lib]
bench = false

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
itertools = "0.7.0"
rand = "0.4"
quickcheck = { version = "0.6", default-features = false }
fnv = "1.0"
lazy_static = "1"
serde_test = "1.0.5"

[features]
# Serialization with serde 1.0
serde-1 = ["serde"]

# for testing only, of course
test_low_transition_point = []
test_debug = []

[profile.bench]
debug = true

[package.metadata.release]
no-dev-version = true

[package.metadata.docs.rs]
features = ["serde-1"]
