[package]
name = "indexmap"
version = "1.1.0"
authors = [
"bluss",
"Josh Stone <cuviper@gmail.com>"
]
documentation = "https://docs.rs/indexmap/"
repository = "https://github.com/bluss/indexmap"
license = "Apache-2.0/MIT"
description = """
A hash table with consistent order and fast iteration.

The indexmap is a hash table where the iteration order of the key-value
pairs is independent of the hash values of the keys. It has the usual
hash table functionality, it preserves insertion order except after
removals, and it allows lookup of its elements by either hash table key
or numerical index. A corresponding hash set type is also provided.

This crate was initially published under the name ordermap, but it was renamed to
indexmap.
"""

keywords = ["hashmap"]
categories = ["data-structures"]

[package.metadata.release]
no-dev-version = true

[package.metadata.docs.rs]
features = ["serde-1"]

[lib]
bench = false

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
itertools = "0.7.0"
rand = "0.4"
quickcheck = { version = "0.6", default-features = false }
fnv = "1.0"
lazy_static = "1"
serde_test = "1.0.5"

[features]
# Serialization with serde 1.0
serde-1 = ["serde"]

# for testing only, of course
test_low_transition_point = []
test_debug = []

force_std = []

[profile.bench]
debug = true

[build-dependencies]
autocfg = "0.1.5"

[[test]]
name = "tests"
required-features = [ "force_std" ]

[[test]]
name = "serde"
required-features = [ "force_std" ]

[[test]]
name = "quick"
required-features = [ "force_std" ]

[[test]]
name = "equivalent_trait"
required-features = [ "force_std" ]

[[bench]]
name = "bench"
required-features = [ "force_std" ]

[[bench]]
name = "faststring"
required-features = [ "force_std" ]
