[package]
name = "indexmap"
version = "1.3.0"
authors = [
"bluss",
"Josh Stone <cuviper@gmail.com>"
]
documentation = "https://docs.rs/indexmap/"
repository = "https://github.com/bluss/indexmap"
license = "Apache-2.0/MIT"
description = """
A hash table with consistent order and fast iteration.

The indexmap is a hash table where the iteration order of the key-value
pairs is independent of the hash values of the keys. It has the usual
hash table functionality, it preserves insertion order except after
removals, and it allows lookup of its elements by either hash table key
or numerical index. A corresponding hash set type is also provided.

This crate was initially published under the name ordermap, but it was renamed to
indexmap.
"""

keywords = ["hashmap", "no_std"]
categories = ["data-structures", "no-std"]

build = "build.rs"

[lib]
bench = false

[build-dependencies]
autocfg = "0.1.6"
[dependencies]
serde = { version = "1.0", optional = true }
rayon = { version = "1.0", optional = true }

[dev-dependencies]
itertools = "0.8"
rand = "0.6"
quickcheck = { version = "0.8", default-features = false }
fnv = "1.0"
lazy_static = "1.3"
serde_test = "1.0.99"

[features]
# Serialization with serde 1.0
serde-1 = ["serde"]

# for testing only, of course
test_low_transition_point = []
test_debug = []

[profile.bench]
debug = true

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[package.metadata.docs.rs]
features = ["serde-1", "rayon"]

[workspace]
members = ["test-nostd"]
